--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,55 +1,53 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         // Build tasks
         {
-            "label": "build",
-            "detail": "Build workspace (default)",
-            "type": "shell",
-            "command": "./build.sh",
-            "group": {
-                "kind": "build",
-                "isDefault": true
+            "label": "build",   // 任务标签，用于在 VS Code 中识别任务
+            "detail": "Build workspace (default)",  // 任务的详细描述
+            "type": "shell",    // 任务类型，这里是 shell 类型，即运行 shell 命令
+            "command": "./build.sh",    // 执行的命令
+            "group": {  // 任务分组，有助于在 VS Code 中对任务进行分类
+                "kind": "build",    // 表示这是一个构建任务
+                "isDefault": true   // 设置为默认构建任务
             },
-            "problemMatcher": "$gcc"
+            "problemMatcher": "$gcc"    // 使用 gcc 问题匹配器，用于从输出中捕获问题
         },
         {
-            "label": "debug",
-            "detail": "Build workspace (debug)",
-            "type": "shell",
-            "command": "./build.sh",
-            "options": {
-                "env": {
-                    "BUILD_TYPE": "Debug"
+            "label": "debug",   // 调试任务
+            "detail": "Build workspace (debug)",    // 详细描述
+            "type": "shell",    // shell 类型
+            "command": "./build.sh",    // 执行的命令
+            "options": {    // 任务选项
+                "env": {    // 环境变量
+                    "BUILD_TYPE": "Debug"   // 设置 BUILD_TYPE 环境变量为 Debug
                 }
             },
-            "group": "build",
-            "problemMatcher": "$gcc"
+            "group": "build",   // 分组为构建
+            "problemMatcher": "$gcc"    // 问题匹配器
         },
         // Test tasks
         {
-            "label": "test",
-            "detail": "Run all unit tests and show results.",
-            "type": "shell",
-            "command": "./test.sh",
-            "group": {
-                "kind": "test",
-                "isDefault": true
+            "label": "test",    // 测试任务
+            "detail": "Run all unit tests and show results.",   // 详细描述
+            "type": "shell",    // shell 类型
+            "command": "./test.sh",   // 执行的命令
+            "group": {  // 分组
+                "kind": "test", // 测试任务
+                "isDefault": true   // 默认测试任务
             }
         },
         // Clean
         {
-            "label": "clean",
-            "detail": "Run the clean target",
-            "type": "shell",
-            "command": "colcon build --cmake-target clean",
-            "problemMatcher": "$gcc"
+            "label": "clean",   // 清理任务
+            "detail": "Run the clean target",   // 详细描述
+            "type": "shell",    // shell 类型
+            "command": "colcon build --cmake-target clean",   // 执行的命令
+            "problemMatcher": "$gcc"    // 问题匹配器
         },
         {
-            "label": "purge",
-            "detail": "Purge workspace by deleting all generated files.",
+            "label": "purge",   // 清理任务
+            "detail": "Purge workspace by deleting all generated files.",   // 详细描述
             "type": "shell",
             "command": "sudo rm -fr build install log; sudo py3clean .",
             "problemMatcher": []
